--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </section>
 
     <footer>
-      <p>If you have any questions, contact us at <a href="mailto:support@example.com">support@example.com</a>.</p>
+      <p>If you have any questions, contact us at <a href="mailto:support@Intelligenceforex.com">support@Intelligenceforex.com</a>.</p>
     </footer>
   </div>
 </body>
