--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IntelligenceFX — Terms & Conditions</title>
+  <title>IntelligenceFX — Privacy Policy</title>
   <meta name="description" content="Terms and Conditions for IntelligenceFX app."/>
   <style>
     :root {
