--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>IntelligenceFX — Terms &amp; Conditions</h1>
+      <h1>IntelligenceFX — Privacy Policy </h1>
       <div class="sub">Last updated: August 15, 2025</div>
       <p>Welcome to IntelligenceFX, an application designed to provide users with insights, education, and information related to financial markets. By signing up for the IntelligenceFX app, you agree to the following terms and conditions.</p>
-    </header>
-
+    </header>er
     <section>
       <h2>1. Accuracy of Information</h2>
       <p>You agree to provide accurate and up-to-date information during the sign-up process, including your name, email address, and payment information.</p>
